Added the min-max

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
               <li>Wind: <span id="wind"></span> km/h</li>
             </div>
           </div>
-          <div class="weather-forecast">
+          <div class="weather-forecast" id="forecast">
             <div class="row">
               <div class="col-2">
                 <div class="weather-forecast-date">
-                    <p>Thu</p>
+                  <p>Thu</p>
                 </div>
 
                 <img
@@ -70,14 +70,10 @@
                   alt=""
                   width="35"
                 />
-               <div class="weather-forecast-temperature">
-                <span class="maximum-temperature">
-                    18°
-                </span>
-                <span class="minimum-temperature">
-                    12°
-                </span>
-               </div>
+                <div class="weather-forecast-temperature">
+                  <span class="maximum-temperature"> 18° </span>
+                  <span class="minimum-temperature"> 12° </span>
+                </div>
               </div>
             </div>
           </div>
